--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,13 @@
                 <version>2.2.1</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>2.2.1</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <dependencies>
@@ -220,6 +226,11 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
